--- a/app.json
+++ b/app.json
@@ -17,20 +17,29 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "foregroundImage": "./assets/images/planticon.jpg",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sayanghosh10.plantdiseaseapp"
     },
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/planticon.jpg"
     },
     "plugins": [
       "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "0e294ce0-7295-46cc-aa39-1182b9b33f18"
+      }
     }
   }
 }
